social mobile homepage alignment fix

--- a/drupal/sites/all/themes/pivot/sass/_pivot-homepage-hero.scss
+++ b/drupal/sites/all/themes/pivot/sass/_pivot-homepage-hero.scss
@@ -49,6 +49,9 @@
 	background-repeat: no-repeat;
   background-size: 32px 32px;
 	margin-left: 11px;
+	&:first-child{
+		margin-left: 0;
+	}
 }
 .front #home-header .social ul{
   float: right;
